# yeti

./: .dockerignore  .gitignore  AGENTS.md  Caddyfile  Cargo.toml  PLAN.md  README.md  Yeti.sln  docker-compose.yml
Yeti.Api/: Dockerfile  Program.cs  Yeti.Api.csproj  appsettings.json
Yeti.Api/Config/: ConfigurationExtensions.cs  ConfigureTokenOptions.cs  TokenOptions.cs
Yeti.Api/Controller/: FragmentController.cs  LoginController.cs  ManuscriptController.cs  ReadController.cs  SearchController.cs  TagController.cs  TestController.cs  WriterController.cs  YetiController.cs
Yeti.Api/Service/: PasswordValidateService.cs  TokenService.cs
Yeti.Core/: ClaimsPrincipalExtensions.cs  Class1.cs  Time.cs  Yeti.Core.csproj
Yeti.Core/Config/: ConfigSections.cs  Configure.cs  ConfigureIndexOptions.cs  HashProviderOptions.cs  IndexOptions.cs  ServiceCollectionExtensions.cs
Yeti.Core/Config/_interface/: IConfigurable.cs
Yeti.Core/Model/: CreateFragment.cs  CreateManuscript.cs  DeleteFragment.cs  DeleteManuscript.cs  FragmentDetail.cs  FragmentInfo.cs  FragmentSummary.cs  Login.cs  ManuscriptSummary.cs  ModifyTag.cs  Snapshot.cs  UpdateFragment.cs  UpdateManuscript.cs  UpdateWriter.cs  WriterInfo.cs
Yeti.Core/Provider/: FragmentDetailProvider.cs  FragmentSummaryProvider.cs  HashProvider.cs  ManuscriptSummaryProvider.cs
Yeti.Core/Service/: FragmentExtensions.cs  FragmentService.cs  IndexClient.cs  IndexingService.cs  LoginService.cs  ManuscriptService.cs  RecentService.cs  SearchService.cs  TagSearchService.cs  TagService.cs  WriterService.cs
Yeti.Core/Service/_interface/: IIndexingService.cs
Yeti.Core/_exception/: ConfigurationException.cs  IndexException.cs
Yeti.Db/: Dockerfile  WriterContext.cs  Yeti.Db.csproj
Yeti.Db/Design/: WriterContextFactory.cs
Yeti.Db/Migrations/: 20240210020437_InitialCreate.Designer.cs  20240210020437_InitialCreate.cs  20240313022205_InitialCreate.Designer.cs  20240313022205_InitialCreate.cs  20240313025251_InitialCreate.Designer.cs  20240313025251_InitialCreate.cs  20260625020507_InitialCreate.Designer.cs  20260625020507_InitialCreate.cs  WriterContextModelSnapshot.cs
Yeti.Db/Model/: Fragment.cs  ISoftDeletable.cs  Login.cs  Manuscript.cs  ManuscriptTag.cs  Tag.cs  Tracked.cs  Writer.cs
Yeti.Db/Model/_interface/: ISortable.cs
Yeti.Test/: FragmentExtensions.cs  UnitTest1.cs  Yeti.Test.csproj
Yeti.Web/: Dockerfile  Program.cs  ViewModels.cs  Yeti.Web.csproj  appsettings.json
Yeti.Web/Pages/: Index.cshtml  Index.cshtml.cs  Login.cshtml  Login.cshtml.cs  Logout.cshtml.cs  Manuscript.cshtml  Manuscript.cshtml.cs  Read.cshtml  Read.cshtml.cs  Search.cshtml  Search.cshtml.cs  Tag.cshtml  Tag.cshtml.cs  Tags.cshtml  Tags.cshtml.cs  _ViewImports.cshtml
Yeti.Web/Pages/Shared/: _Layout.cshtml  _ManuscriptListPage.cshtml  _SearchResults.cshtml
Yeti.Web/Properties/: launchSettings.json
Yeti.Web/wwwroot/author/: index.html
Yeti.Web/wwwroot/author/assets/: index-BI7DB4dO.css  index-DkTc0iqQ.js
Yeti.Web/wwwroot/css/: site.css
search/: Cargo.toml
search-api/: Cargo.toml  Dockerfile
search-api/src/: logging.rs  main.rs
search-cli/: Cargo.toml
search-cli/src/: logging.rs
search/src/: error.rs  index.rs  lib.rs  model.rs  schema.rs
yeti-next/: package-lock.json  package.json
yeti-pw/: .gitignore  Cargo.toml
yeti-pw/src/: main.rs
yeti-remix/: package-lock.json  package.json
yeti-remix/app/: app.css  root.tsx
yeti-remix/app/components/: Header.tsx
yeti-remix/app/models/: manuscript.ts
yeti-remix/app/routes/: _index.tsx  login.tsx
yeti-search/: Cargo.toml
yeti-search/search/: Cargo.toml
yeti-search/search-api/: Cargo.toml
yeti-search/search-api/src/: logging.rs  main.rs
yeti-search/search-cli/: Cargo.toml
yeti-search/search-cli/src/: main.rs
yeti-search/search/src/: db.rs  error.rs  index.rs  lib.rs  model.rs  schema.rs
yeti-search/src/: logging.rs  main.rs  schema.rs
yeti-searchinit/: Cargo.toml
yeti-searchinit/src/: main.rs
yeti-seed/: Cargo.toml
yeti-seed/src/: main.rs
yeti-svelte/: index.html  package-lock.json  package.json  vite.config.ts
yeti-svelte/src/: App.svelte
yeti-vue/: README.md  index.html  package-lock.json  package.json  vite.config.ts
