[package]
name = "search-api"
version = "0.1.0"
edition = "2021"
default-run = "search-api" # Why in the blue hell would this work?

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = [
    "postgres",
    "uuid",
    "serde_json",
    "r2d2",
] }
dotenvy = "0.15.7"
flume = "0.11.0"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
search = { path = "../search" }
anyhow = "1.0.80"
