[package]
name = "search-api"
version = "0.1.0"
edition = "2024"
default-run = "search-api" # Why in the blue hell would this work?

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.7", features = [
    "postgres",
    "uuid",
    "serde_json",
    "r2d2",
] }
dotenvy = "0.15.7"
flume = "0.11.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
search = { path = "../search" }
anyhow = "1.0.96"
mimalloc = "0.1.46"
