[package]
name = "search-cli"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.3.10", features = ["postgres", "uuid", "serde_json"] }
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
search = { path = "../search" }
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
anyhow = "1.0.102"
