[package]
name = "search"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronograf = "0.1.1"
diesel = { version = "2.2.7", features = [
    "postgres",
    "uuid",
    "serde_json",
    "r2d2",
] }
serde = { version = "1.0.218", features = ["derive"] }
tantivy = "0.22.0"
thiserror = "2.0.11"
tracing = "0.1.41"
