[package]
name = "search"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronograf = "0.2.0"
diesel = { version = "2.3.10", features = [
    "postgres",
    "uuid",
    "serde_json",
    "r2d2",
] }
serde = { version = "1.0.228", features = ["derive"] }
tantivy = "0.26.1"
thiserror = "2.0.18"
tracing = "0.1.44"
