[package]
name = "yeti-pw"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
argon2 = { version = "0.5.3", features = ["std"] }
clap = { version = "4.5.31", features = ["derive", "wrap_help"] }
