[package]
name = "yeti-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
chrono = { version = "0.4.33", features = ["serde"] }
chronograf = "0.1.0"
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
diesel = { version = "2.1.4", features = ["postgres", "uuid", "serde_json"] }
dotenvy = "0.15.7"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
