[package]
name = "yeti-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
chronograf = "0.1.0"
diesel = { version = "2.1.4", features = ["postgres", "uuid", "serde_json", "r2d2"] }
directories = "5.0.1"
dotenvy = "0.15.7"
flume = "0.11.0"
rayon = "1.8.1"
rocket = "0.5.0"
serde = { version = "1.0.196", features = ["derive"] }
tantivy = "0.21.1"
tokio = { version = "1.36.0", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
