[package]
name = "yeti-seed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive", "wrap_help"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
