[package]
name = "yeti-seed"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
