[package]
name = "search-api"
version = "0.1.0"
edition = "2021"
default-run = "search-api" # Why in the blue hell would this work?

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
chronograf = "0.1.0"
diesel = { version = "2.1.4", features = [
    "postgres",
    "uuid",
    "serde_json",
    "r2d2",
] }
directories = "5.0.1"
dotenvy = "0.15.7"
flume = "0.11.0"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
tantivy = "0.21.1"
tokio = { version = "1.36.0", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
search = { path = "../search" }
