[package]
name = "search-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
chronograf = "0.1.0"
diesel = { version = "2.1.4", features = ["postgres", "uuid", "serde_json"] }
directories = "5.0.1"
dotenvy = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }
tantivy = "0.21.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
search = { path = "../search" }
clap = { version = "4.5.1", features = ["derive", "wrap_help"] }
anyhow = "1.0.80"
