[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronograf = "0.1.0"
diesel = { version = "2.1.4", features = [
    "postgres",
    "uuid",
    "serde_json",
    "r2d2",
] }
serde = { version = "1.0.197", features = ["derive"] }
tantivy = "0.21.1"
thiserror = "1.0.57"
tracing = "0.1.40"
